[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/images/ALL.png" type="Texture" id=1]
[ext_resource path="res://scenes/menu/healthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/menu/R_healthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/menu/cenarios.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/BROMPH_TOWN.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/menu/PauseMenu.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 718.641, 49 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 394.812, 4.3739 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 346.5, 2.99902 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1591, 70 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 5 )

[node name="Arena" type="Node2D"]
script = ExtResource( 4 )

[node name="Texture" type="Sprite" parent="."]
position = Vector2( 717.499, 449.75 )
scale = Vector2( 1.79676, 2.36257 )
texture = ExtResource( 1 )
hframes = 3
vframes = 7
frame = 19
__meta__ = {
"_edit_lock_": true
}

[node name="MapLimits" type="StaticBody2D" parent="."]
collision_mask = 14
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionFloor" type="CollisionShape2D" parent="MapLimits"]
position = Vector2( 719, 786 )
shape = SubResource( 1 )

[node name="CollisionRight" type="CollisionShape2D" parent="MapLimits"]
position = Vector2( 1433.62, 396.188 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="CollisionLeft" type="CollisionShape2D" parent="MapLimits"]
position = Vector2( 0.999729, 440.5 )
rotation = -1.5708
shape = SubResource( 3 )

[node name="Player1" type="Position2D" parent="."]
position = Vector2( 633, 543 )

[node name="Player2" type="Position2D" parent="."]
position = Vector2( 757, 539 )

[node name="MapLimit" type="Area2D" parent="."]
monitorable = false

[node name="Collison" type="CollisionShape2D" parent="MapLimit"]
position = Vector2( 752, 968 )
shape = SubResource( 5 )

[node name="CollisionRight" type="CollisionShape2D" parent="MapLimit"]
position = Vector2( 1433.62, 396.188 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="CollisionLeft" type="CollisionShape2D" parent="MapLimit"]
position = Vector2( 0.999729, 440.5 )
rotation = -1.5708
shape = SubResource( 3 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
margin_left = 177.0
margin_top = 116.0
margin_right = 177.0
margin_bottom = 116.0
rect_scale = Vector2( 1.2, 1.2 )

[node name="HealthBar2" parent="." instance=ExtResource( 3 )]
margin_left = 1254.0
margin_top = 116.0
margin_right = 1254.0
margin_bottom = 116.0
rect_scale = Vector2( 1.2, 1.2 )

[node name="WinDelay" type="Timer" parent="."]
one_shot = true

[node name="FigthTimer" type="Timer" parent="."]
autostart = true

[node name="TimeLabel" type="Label" parent="."]
margin_left = 651.0
margin_top = 68.0
margin_right = 836.0
margin_bottom = 124.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "2:00"
align = 1
valign = 1
uppercase = true

[node name="Music" type="AudioStreamPlayer2D" parent="."]

[node name="TextPlaceholder" type="Label" parent="."]
visible = false
margin_left = 367.0
margin_top = 281.0
margin_right = 1067.0
margin_bottom = 345.0
custom_colors/font_color = Color( 1, 0, 0.305882, 1 )
custom_fonts/font = SubResource( 7 )
text = "RyanMan venceu"
align = 1
valign = 1
uppercase = true

[node name="CanvasLayer" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="body_entered" from="MapLimit" to="." method="on_MapLimit_body_entered"]
[connection signal="timeout" from="WinDelay" to="." method="_on_WinDelay_timeout"]
[connection signal="timeout" from="FigthTimer" to="." method="_on_FigthTimer_timeout"]
